# workshop-framework

./: Dockerfile  README.md  TODO.txt  create_launchable.py  docker-compose.yaml  pyproject.toml  requirements.txt
.devx/: DOCS_QUICKSTART.md  README.md  _sidebar.md  docker-compose.yaml  index.html  jp_app_launcher.yaml  legal.md
.devx/lab_app/: README.md
.devx/lab_custom/: README.md
.devx/lab_intro/: README.md
.devx/lab_setup/: README.md
.github/workflows/: devx-build.yaml  docker-build-vi.yaml
devx/: __init__.py  __main__.py  app.py  brev.py  cli.py  create.py  init.py  models.py  publish.py  run.py  sync.py  workspace_config.py  workspaces.py
templates/: .gitignore
templates/simple/: Dockerfile  compose.yaml  pyproject.toml  requirements.txt  variables.env
templates/simple/.devx/: index.html  jp_app_launcher.yaml
templates/simple/.devx/_static/js/: jupyter-link.js
