[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workshop-framework"
description = "Workshop Framework"
version = "0.1.0"
requires-python = ">=3.10"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylance]
reportGeneralTypeIssues = "warning"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
lineLength = 120

[tool.pylint.messages_control]
max-line-length = 120

[tool.brev]
instance_type = "l40s-48gb.1x"
workspace_group_id = "crusoe-brev-wg"
ports = [ { name = "jupyter", port = 8888 } ]
